Removed default default "visibility:hidden" style from instances of YAHOO.widget.,Menu.  This is now only applied via JavaScript. [fix bug 837932]

--- a/widget/menu/src/css/menu.css
+++ b/widget/menu/src/css/menu.css
@@ -2,8 +2,6 @@
 
 div.yuimenu {
 
-    z-index:1;
-    visibility:hidden;
     background-color:#f6f7ee;
     border:solid 1px #c4c4be;
     padding:1px;
